add controllers censos, denues
